[gd_scene load_steps=2 format=3 uid="uid://wxtaa8sbfa45"]

[ext_resource type="Script" path="res://scripts/server_test.gd" id="1_jtybj"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jtybj")
endpoint = "/user/signup"

[node name="log_in" type="Button" parent="."]
layout_mode = 2
offset_left = 273.0
offset_top = 36.0
offset_right = 773.0
offset_bottom = 89.0
theme_override_font_sizes/font_size = 32
text = "I Already Have an Account!"
flat = true

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="center" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 132.0
grow_horizontal = 2
grow_vertical = 2

[node name="vbox" type="VBoxContainer" parent="center"]
layout_mode = 2

[node name="Label3" type="Label" parent="center/vbox"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Email"
vertical_alignment = 2

[node name="email" type="LineEdit" parent="center/vbox"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "fake@email.com"

[node name="Label" type="Label" parent="center/vbox"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Username"
vertical_alignment = 2

[node name="username" type="LineEdit" parent="center/vbox"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "CoolUser"

[node name="Label2" type="Label" parent="center/vbox"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Password
"
vertical_alignment = 2

[node name="password" type="LineEdit" parent="center/vbox"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "PASSWORD!01aaa"

[node name="HSeparator" type="HSeparator" parent="center/vbox"]
custom_minimum_size = Vector2(20, 100)
layout_mode = 2

[node name="submit" type="Button" parent="center/vbox"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Submit
"

[node name="hold_on" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="hold_on"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="hold_on/CenterContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Creating New User..."

[node name="error" type="Control" parent="."]
layout_mode = 1
anchor_right = 1.0
anchor_bottom = 0.312
offset_top = 143.0
offset_bottom = -0.400024

[node name="msg" type="Label" parent="error"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 56.0
offset_top = 45.0
offset_right = -56.0
offset_bottom = -56.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 48
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="log_in" to="." method="_on_log_in_pressed"]
[connection signal="pressed" from="center/vbox/submit" to="." method="_on_submit_pressed"]
